working on spacing issue on landscape

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,7 +124,7 @@ header .mobile {
     }
 
     .content {
-        top: 10em;  /*was 2em*/
+        top: 5em;  /*was 2em*/
     }
 
     .content h1 {
